# MainCar-Cross

./: .gitignore  README.md  docker-compose.yml
srcs/: Dockerfile
srcs/Controller/: CMakeLists.txt  Dockerfile  README.md
srcs/Controller/includes/: Controller.hpp  JetCar.hpp  devices.hpp
srcs/Controller/sources/: Controller.cpp  JetCar.cpp  devices.cpp  main.cpp
srcs/Dashboard/: requirements.txt
srcs/Dashboard/backend/: app.py  app2.py
srcs/Dashboard/frontend/: index.html
srcs/MainCar/: CMakeLists.txt  Dockerfile
srcs/MainCar/cppservice/: CMakeLists.txt  README.md
srcs/MainCar/cppservice/modules/vehicle/: CMakeLists.txt  VehicleConfig.cmake.in
srcs/MainCar/cppservice/modules/vehicle/implementation/: CMakeLists.txt  vehicle.cpp  vehicle.h  vehicle.test.cpp  vehicleacceleration.cpp  vehicleacceleration.h  vehicleacceleration.test.cpp  vehicleangularvelocity.cpp  vehicleangularvelocity.h  vehicleangularvelocity.test.cpp  vehiclebody.cpp  vehiclebody.h  vehiclebody.test.cpp  vehiclebodyhorn.cpp  vehiclebodyhorn.h  vehiclebodyhorn.test.cpp  vehiclebodylights.cpp  vehiclebodylights.h  vehiclebodylights.test.cpp  vehiclebodylightsbackup.cpp  vehiclebodylightsbackup.h  vehiclebodylightsbackup.test.cpp  vehiclebodylightsbeamhigh.cpp  vehiclebodylightsbeamhigh.h  vehiclebodylightsbeamhigh.test.cpp  vehiclebodylightsbeamlow.cpp  vehiclebodylightsbeamlow.h  vehiclebodylightsbeamlow.test.cpp  vehiclebodylightsbrake.cpp  vehiclebodylightsbrake.h  vehiclebodylightsbrake.test.cpp  vehiclebodylightsdirectionindicatorleft.cpp  vehiclebodylightsdirectionindicatorleft.h  vehiclebodylightsdirectionindicatorleft.test.cpp  vehiclebodylightsdirectionindicatorright.cpp  vehiclebodylightsdirectionindicatorright.h  vehiclebodylightsdirectionindicatorright.test.cpp  vehiclebodylightsfogfront.cpp  vehiclebodylightsfogfront.h  vehiclebodylightsfogfront.test.cpp  (+147 more)
srcs/MainCar/cppservice/scripts/: test_cmake.sh
srcs/MainCar/includes/: CANBus.hpp  JetSnailsCar.hpp  ParkSensor.hpp
srcs/MainCar/includes/Subscribers/: ControllerSubscriber.hpp  VehicleInfoSubscriber.hpp  VehicleSubscriber.hpp
srcs/MainCar/sources/: main copy.cpp  main.cpp
srcs/MainCar/sources/CANBus/: CANBus.cpp  receiver.cpp  sender.cpp
srcs/MainCar/sources/Car/: ACar.cpp  JetSnailsCar.cpp
srcs/MainCar/sources/Sensors/: ParkSensor.cpp  SpeedSensor.cpp
srcs/Qt/: CMakeLists.txt  Dockerfile  Main.qml  Route.qml  main.cpp
